# ai-review

./: Dockerfile  README.md  action.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  review.py  supported_models.py
.github/workflows/: ci.yml  pytest.yml
prompts/: humor_integration.txt  system_prompt.txt  user_prompt.txt
src/ai_review/: review.py
src/ai_review/tests/: test_review.py
tests/: test_review.py
